--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-actions": "^2.6.1",
     "app": "^0.1.0",
     "axios": "^0.18.0",
+    "core-js": "2",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
@@ -23,14 +24,15 @@
     "react-redux-toastr": "^7.5.1",
     "react-router-dom": "^5.0.1",
     "redux-actions": "^2.6.5",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-saga": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.4",
-    "@types/react": "^16.9.2",
+    "@types/react": "^16.9.4",
     "@types/react-dom": "^16.9.0",
     "parcel-bundler": "^1.11.0",
     "typescript": "^3.6.2"
