--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
     "@types/lodash": "^4.14.138",
     "@types/react-redux": "^7.1.2",
     "@types/react-redux-toastr": "^7.4.1",
