--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-id-generator": "^2.0.0",
     "react-redux": "^7.1.1",
     "react-redux-toastr": "^7.5.1",
     "react-router-dom": "^5.0.1",
